--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,20 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-<div>
-    <h3>登陆页面</h3>
-    <form action="{{ url_for('account_bp.login') }}" method="post">
-        <label for="loginname">用户名：</label>
-        <input type="text" name="loginname" id="loginname" placeholder="输入用户名">
-        <hr>
-        <label for="password">密码：</label>
-        <input type="password" name="password" id="password" placeholder="输入密码">
-        <input type="submit" value="登陆">
-    </form>
-</div>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+    Login Page
+{% endblock %}
+
+{% block mycss %}
+    <style>
+        .main {
+            background-image: url({{ url_for('static', filename="img/background/sea.jpg") }});
+            background-attachment: fixed;
+            background-size: cover;
+            background-position: center;
+            width: 100%;
+            height: 100%
+        }
+
+        .layout {
+            position: absolute;
+            min-height: 100%;
+            min-width: 100%;
+            left: 0;
+            top: 0;
+            background-color: rgba(244, 244, 244, 0.0)
+        }
+
+        .container {
+            padding-top: 48px;
+            margin-top: 100px;
+        }
+
+    </style>
+{% endblock %}
+
+{% block body %}
+    <div class="main">
+        <div class="layout">
+            <div class="container">
+                <div class="card w-75 mx-auto bg-transparent ">
+                    <div class="card-header font-weight-bold text-center text-white-50 h3">
+                        <span class="mx-5">登</span><span class="mx-5">陆</span>
+                    </div>
+                    <div class="card-body border-secondary w-75 mx-auto text-white">
+                        <form action="{{ url_for('account_bp.login') }}" method="post">
+                            <div class="form-group">
+                                <label for="loginname">用户名：</label>
+                                <input class="form-control border-bottom bg-transparent" type="text" name="loginname"
+                                       id="loginname"
+                                       placeholder="输入用户名">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="password">密码：</label>
+                                <input class="form-control border-bottom bg-transparent" type="password" name="password"
+                                       id="password"
+                                       placeholder="输入密码">
+                            </div>
+
+                            <input class="btn btn-dark float-right" type="submit" value="登陆">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block myscript %}
+    <script>
+
+        $(window).on("load resize", function () {
+            let h = window.innerHeight || document.body.clientHeight || document.documentElement.clientHeight;
+            $(".main").css("height", h);
+        });
+
+    </script>
+{% endblock %}
